# eff

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/core/: errors.rs
lib/src/edds/: dds_header.rs  edds.rs
lib/tests/: edds_tests.rs
src/core/: errors.rs  mod.rs  read.rs
src/edds/: dds_header.rs  edds.rs  mod.rs
tests/: edds_tests.rs
tests/test-data/edds_in/: Eden_1337_normal.edds  Eden_1337_supertexture.edds
